--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ z-index: 3;
     -ms-transform: rotate(90deg);
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
-html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
+html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%; line-height: 5px;}
 }}
 
 @media screen and (min-width: 1700px) and (orientation: landscape){
