--- a/index.html
+++ b/index.html
@@ -424,7 +424,8 @@ z-index: 3;
     -ms-transform: rotate(90deg);
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
-html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%; line-height: 10px !important;}
+html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%; line-height: 8px !important;}
+#updateitems{line-height: 5px !important;}
 }}
 
 @media screen and (min-width: 1700px) and (orientation: landscape){
@@ -489,13 +490,13 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%; line-height: 10px !
 <div id="update" style="background-image:url(https://i.imgur.com/zfmgsed.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 112px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 15px">
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
-<br></div>
+<br></div><div id="updateitems">
 　　07.31 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
 　　07.31 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> collage on: <a href="/aes" style="text-decoration: none;"><font color="#DFB7B7">/aes</font></a><br>
 　　07.29 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> web page on: <a href="/links" style="text-decoration: none;"><font color="#DFB7B7">/links</font></a><br>
 　　07.29 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> stuff on: <a href="/pooftie" style="text-decoration: none;"><font color="#DFB7B7">/pooftie</font></a><br>
 　　07.25 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> updates on: <a href="/myfluffylife" style="text-decoration: none;"><font color="#DFB7B7">/myfluffylife</font></a><br>
-</div>
+</div></div>
 </center>
 
 <br>
