--- a/index.html
+++ b/index.html
@@ -424,7 +424,9 @@ z-index: 3;
     -ms-transform: rotate(90deg);
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
-html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 12px !important;}
+html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 15px !important;}
+#indextext1{-webkit-text-size-adjust: 120%; text-size-adjust: 120%; line-height: 10px !important;}
+#indextext2{-webkit-text-size-adjust: 120%; text-size-adjust: 120%; line-height: 10px !important;}
 #updateitems{line-height: 10px !important;}
 }}
 
@@ -510,7 +512,7 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 12px !
 <br><br>
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://shybunny.store" target="_blank"><font color="#c9a5a5"> visit my craft store </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font></div>
 
-<div style="line-height: 13px"><br><br></div>
+<div id="indextext1" style="line-height: 13px"><br><br></div>
 <font color="#c4ae9d">welcome to my safe corner on the internet !<br>
 make yourself comfy and enjoy your stay <font style="font-size:11px">♡</font><br>
 important reminder :</font><br><br>
@@ -658,8 +660,8 @@ setTimeout("randomdisplay()",100)
 
 <!--oooo-->
 </center>
-<br>
-<font color="#c4ae9d">if you're feeling sad, please let me try to </font><a id="linkzinho" href="/help" style="text-decoration: none;"><font color="#e8c2c2">help</font></a>
+<div id="indextext1">
+<font color="#c4ae9d">if you're feeling sad, please let me try to </font><a id="linkzinho" href="/help" style="text-decoration: none;"><font color="#e8c2c2">help</font></a></div>
 
 
 <br><br>
