--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 15px !
 <br><br>
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://shybunny.store" target="_blank"><font color="#c9a5a5"> visit my craft store </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font></div>
 
-<div id="indextext1"><div style="line-height: 13px"><br></div>
+<div id="indextext1"><div style="line-height: 13px"><br><br></div>
 <font color="#c4ae9d">welcome to my safe corner on the internet !<br>
 make yourself comfy and enjoy your stay <font style="font-size:11px">♡</font><br>
 important reminder :</font><br><br></div>
@@ -660,7 +660,7 @@ setTimeout("randomdisplay()",100)
 
 <!--oooo-->
 </center>
-<div id="indextext1">
+<br><div id="indextext1">
 <font color="#c4ae9d">if you're feeling sad, please let me try to </font><a id="linkzinho" href="/help" style="text-decoration: none;"><font color="#e8c2c2">help</font></a></div>
 
 
