--- a/links.html
+++ b/links.html
@@ -423,6 +423,8 @@ z-index: 3;
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
 html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
+#linkitems1{line-height: 10px !important;}
+#linkitems2{line-height: 10px !important;}
 }}
 
 @media screen and (min-width: 1700px) and (orientation: landscape){
@@ -490,7 +492,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="margin-top:-5px;"><font color="#b09698">
 <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/ecPVEov.png"></sub></sub></sub> ‌ my websites :</font><div style="line-height:2px;"><br>
 <br></div>
-<div style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
+<div id="linkitems1" style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
 <font color="#7a6b6b">://</font> <a id="ooo" href="http://ഒ.㏄" target="_blank" >ഒ.㏄</a><br>
  ‌  ‌‌ ‌ <font color="#7a6b6b">⤷</font> <a id="ooo" href="https://middlepot.com" target="_blank" >middlepot.com</a><br>
 <font color="#7a6b6b">://</font> <a id="ooo" href="https://pooftie.me" target="_blank" >pooftie.me</a><br>
@@ -508,7 +510,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 135px; height: 230px; overflow-x:hidden; line-height:20px; padding:5px; padding-top:5px;">
 <div style="margin-top:-2px;"><sub><sub><img width="auto" height="18px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698"> ‌ my side web pages :<div style="line-height:2px;"><br>
 <br></div>
-<div style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
+<div id="linkitems2" style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
 <font color="#7a6b6b">base.</font> <a id="ooo" href="https://base.pooftie.me" target="_blank" >codes for you</a>
 <br>
 <font color="#7a6b6b">care.</font> <a id="ooo" href="https://care.pooftie.me" target="_blank" >my safe room</a>
