--- a/index.html
+++ b/index.html
@@ -493,17 +493,17 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 10px !
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div><div id="updateitems">
+　　08.20 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> web page on: <a href="/links" style="text-decoration: none;"><font color="#DFB7B7">/links</font></a><br>
+　　08.20 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <a href="/pooftie" style="text-decoration: none;"><font color="#DFB7B7">/pooftie</font></a><br>
 　　08.16 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> web page on: <a href="/links" style="text-decoration: none;"><font color="#DFB7B7">/links</font></a><br>
 　　08.11 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> content on: <a href="/care" style="text-decoration: none;"><font color="#DFB7B7">/care</font></a><br>
 　　08.10 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
-　　07.31 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
-　　07.31 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> collage on: <a href="/aes" style="text-decoration: none;"><font color="#DFB7B7">/aes</font></a><br>
 </div></div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . august . 16</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . august . 20</font></font></font>
 <div style="line-height: 13px"><br><br></div>
 <div style="line-height: 10px">
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
