--- a/contact.html
+++ b/contact.html
@@ -483,9 +483,27 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 </div>
 
 <script>
+	function sanitizeEmail(val){
+		if(val){
+			//replace similar unicode characters with ascii ones
+			val = val.replace(/＠|﹫/g, '@');
+			val = val.toLowerCase();
+		}
+		return val;
+	}
+	function validateEmail(email) {
+		var re = /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+		var test = re.test(sanitizeEmail(String(email).toLowerCase()));
+		return test;
+	}
 	function sendForm(){
 		var name = document.getElementById('name');
 		var email = document.getElementById('email');
+		document.getElementById('invalid_email').style.display = 'none';
+		if(!validateEmail(email.value)){
+			document.getElementById('invalid_email').style.display = 'block';
+			return;
+		}
 		var message = document.getElementById('message');
 		fetch(api_path+'/form', {
 			method: 'POST',
@@ -517,6 +535,8 @@ overflow: hidden; z-index: 10; width:180px; height:20px;
 background: transparent; resize: none; padding:5px; outline:none;
 border: 0px; cursor: url(https://i.imgur.com/4oHqWDj.png), progress; color: #9e8e8e;
 font-family: verdana; font-size: 10px; letter-spacing:1px; line-height:15px;"></input>
+<p style="display: none; position: absolute; left: 130px; top: 125px; z-index: 10; width: 200px;
+font-family: Verdana; font-size: 8px; color: #9e8e8e;" id="invalid_email">please enter a valid email !</p>
 
 <textarea id="message" maxlength="2000" style="position: absolute; left: 60px; top: 148px;
 overflow: auto; overflow: scroll; z-index: 10; width:290px; height:192px;
