--- a/recommended.html
+++ b/recommended.html
@@ -351,7 +351,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 　<a href="https://neoratz.neocities.org" target="_blank"><img src="https://i.imgur.com/o9uyrYq.gif"></a>
 　<a href="https://kowakawaii.moe" target="_blank"><img width="88px" height="31px" src="https://i.imgur.com/l0O6Qnq.gif"></a>　　
 
-<br><br><a href="https://dokodemo.neocities.org" target="_blank"><img src="https://i.imgur.com/hhrLJ1P.gif"></a>
+<br><br><a href="https://web.archive.org/web/20220806013832/https://dokodemo.neocities.org/" target="_blank"><img src="https://i.imgur.com/hhrLJ1P.gif"></a>
 　<a href="https://ophanimkei.com" target="_blank"><img src="https://i.imgur.com/rj0io1Z.png"></a>
 　<a href="https://koinuko.pink" target="_blank"><img src="https://i.imgur.com/0CtvGkr.gif"></a>　　
 
