--- a/portfolio.html
+++ b/portfolio.html
@@ -514,9 +514,9 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <a href="https://shybunny.store" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
 <a href="https://base.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/R2Ec5Oj.png"></a><br><br>
 <a href="https://care.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/3zK3gTz.gif"></a><br><br>
+<a href="https://frilly.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/8xPq3dO.gif"></a><br><br>
 <a href="https://2006.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
-<a href="https://pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/jpdAYT4.gif"></a><br><br>
-<a href="https://ch.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a>
+<a href="https://pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/jpdAYT4.gif"></a>
 <br><br><br>
 <div style="line-height:3px;"><br><br><br><a name="needlefelting" id="needlefelting"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
@@ -751,7 +751,7 @@ function resetPlayer() {
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ collaging ..<br><br>
 <br>
-<img width="400px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/jhqrZZN.png"><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
 <img width="190px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="190px" height="auto" src="https://i.imgur.com/QApSfkU.png"><br><br>
 <img width="190px" height="auto" src="https://i.imgur.com/PeQffP8.png"> <img width="190px" height="auto" src="https://i.imgur.com/LzXVDMA.png">
