--- a/blog.html
+++ b/blog.html
@@ -502,6 +502,199 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://middlepot.com/img/16.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 31 . 2022</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>🌷</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+august, the anniversary month ( as explained on the last post ) , has gone by so fast .. my birthday was really nice, it was sunny and i had lots of fun <sub>⭐</sub>
+i tried my best to take a little vacation by the first half of the month, but then days got super busy again, as i had to working on many things quickly !
+well, it is worth the efforts, as i see the things i make are making people smile. it keeps me motivated <sub>💖</sub>
+
+before i start showing you things i have made, i will leave this quick note at the beginning of the post, because it's very important :
+recently i have been getting a lot of messages on my contact form ( which makes me really happy ! i'm really so thankful for your kind words <font color="#d3a5a5" style="font-size:11px;">♡</font> )
+the thing is : i have been responding to everyone i had on my inbox so far - except for a few who didn't filled the email field !!
+i can't possibly respond to messages with no emails, and i got some lovely messages that i really really wanted to respond ..
+so if you're waiting for a response for more than a week already, please send me a new message with your email using the same name you used last time, or at least mentioning the previous subject ( so i know it's the same person ) and i will respond to you properly ! <sub>💌</sub>
+
+for avoiding this issue from ever happening again i recently updated my contact forms so the email field is obligatory.
+( the reason why i didn't do this before was because i wanted a way of people sending messages anonymously if they so wish, but since it's causing problems it's better not to )
+
+i got a long message last week, asking for advice, and it broke my heart that i couldn't write back ; ;
+i won't mention names here to keep their privacy, but please know that if you sent me a message but didn't ever get a response, it's probably because you forgot to write your email, not because you were "bothering" me or something like it ..
+the only messages i willingly refuse to respond are mean / hateful ones, so please don't worry about resending your message and asking me just to be extra sure !
+( sometimes emails go to people's spam folder too, so be sure to always check it )
+
+
+
+okay, now let's go for the stuff !!
+i made two new mini games for the <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties website</a>, because as i started playing around with html so frequently i had lots of new ideas for these small browser games.
+i have many other ideas on my to do list, so you can expect more to come <sub>🖇</sub>
+click the images to open the games and have fun :</pre>
+<br><br>
+
+<center><a href="https://poofties.club/thinking" target="_blank"><img src="https://i.imgur.com/83UaAMz.png"/></a>
+<br><br>
+<sub>🩰</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/a/precious%20things.mp3" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">precious things .mp3</font></a>　
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this is a word guessing game, very simple, but adorable !!
+it's my favorite mini game so far. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i wrote 100+ words for it, so i forgot them all by now and can actually play it myself .. which is a little embarrassing, my memory is horrible LOL
+the melody for this game is lovely, and i think it really fits the whole mood <sub>🌼</sub>
+</pre>
+<br><br>
+
+<center><a href="https://poofties.club/pillowcakemilk" target="_blank"><img src="https://i.imgur.com/3liNrrT.png"/></a>
+<br><br>
+<sub>🩰</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/a/lazy%20morning.mp3" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">lazy morning .mp3</font></a>　
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this one is a "rock, paper, scissors" nonsense variation that i made, just because .. !
+i tried to explain the logics behind it, i know it's weird - but still cute, right ? <sub>🍰</sub>
+the melody for this one is all about these mornings where you wake up a little late, but try to do something useful anyway, but then keep procrastinating, laying around, doing a lot of nothings ~
+and suddenly, you're hungry - wait, it's time for lunch already !?
+
+
+
+i had to go through many lazy mornings lately, but luckily i can be quite productive during the afternoon !
+one thing i have been taking a while to prepare and finally finished, is new item options for the <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a> !!
+</pre>
+<br><br>
+
+<center><a href="https://shybunny.store/floof" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/s33xYaq.gif"/></a>
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+as you can see, there are 4 new options on the "floof your fluffy" page <sub>🎀</sub>
+these are all item options that got requested during this year. if you have requests too, let me know !
+it's hard to adapt items to the current shop format, and of course, it's hard to get the materials ready & test everything, but i do want to add more stuff for the store in the future.
+i have some big plans, but as you know, big things take big time to get done, much more because there are so many small projects in the way <sub>✂️</sub>
+
+i'm really thankful for all the support i have got to this day, it's thanks to that that i can keep working hard to make lots of new things <sub>💕</sub>
+
+
+
+remember when i said last post that i was preparing a new useful web page ?
+i did it ! it's a site where you can easily customize your own "virtual letter" template the way you want : <a id="linkbjinho" href="https://mail.pooftie.me" target="_blank">mail.pooftie.me</a> <sub>💌</sub>
+</pre>
+<br><br>
+
+<center><a href="https://mail.pooftie.me" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/oIEcDMt.gif"/></a>
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+many people have a hard time making cute emails and requested my help, so i thought making a ready-to-use template would be ideal.
+i explained all details on the website itself, so if you're interested, give it a click !
+
+just one extra tip for those who want to try to use this template but are unsure about how it will look like when using : send emails to yourself first <sub>✏️</sub>
+that way you can test things freely, and also check it on different devices you have access to, without worrying about messing up a real email that you're sending.
+i always send myself an email if i'm worried about it looking weird, and if it looks fine i can copy & paste to send it to the right person !
+at the beginning it feels a little complicated, but after some practice it becomes really easy & fun to experiment with <sub>❤️</sub>
+
+i have seen some people using this template already, and it made me so happy .. exchanging emails is really nice, i love doing it, and it's a lot better if you can make it cute, right ?
+
+
+
+recently i also made another thing i wanted to do for a long time, but well, it's not a useful one .. but it's certainly an adorable one !!
+an web page i made is just for funsies : <a id="linkbjinho" href="https://frilly.pooftie.me" target="_blank">frilly.pooftie.me</a> <sub>🎗</sub>
+</pre>
+<br><br>
+
+<center><a href="https://frilly.pooftie.me" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/8xPq3dO.gif"/></a>
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i've always loved "esoteric" programming languages, so i made my own : 𝑓𝑟𝑖𝑙𝑙𝑦 <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+what is an esoteric language, you ask ?
+<b>wikipedia says :</b> an esoteric programming language is a programming language designed to test the boundaries of computer programming language design, as a proof of concept, as software art, as a hacking interface to another language, or as a joke.
+
+mine is a markup language, since i'm a html person and not actually a good programmer per say .. !
+but i'm very proud of it <sub>💗</sub>
+i managed to make this thing full of weird ( and cute ) symbols actually work, all by myself !!
+i always thought it was super hard to make a language so i was prepared to ask bubu for help, but in the end it's basically just a matter of managing conversions so the browser can run the weird codes.
+in my case, 𝑓𝑟𝑖𝑙𝑙𝑦 is basically html, so i was able to use it as a base.
+
+it was a lot of fun to work on this little project, i love how the site turned out .. and yes i am using comic sans <sub>⭐</sub>
+comic sans is such a cute font, i genuinely like it. people should give it some love and stop being mean about it !
+
+working on 𝑓𝑟𝑖𝑙𝑙𝑦 gave me some cool ideas for the future as well.
+since it only runs inside my web page, i kept the preview small and simple, but i could actually run entire websites coded with 𝑓𝑟𝑖𝑙𝑙𝑦 if i made my own web browser, to run my own internet protocol <sub>💻</sub>
+( in this case i would probably make an integrated conversion between html and 𝑓𝑟𝑖𝑙𝑙𝑦, so people won't need to memorize so many random symbol combinations for coding their pages LOL )
+those are things i have big interest in, especially protocols .. isn't it a magical idea to have your own little internet, sort of ?
+you can even make up your own top-level domains this way, imagine the possibilities !!
+and i see some practical uses for this ( like integrations with my projects & easily creating safe closed spaces ) so i will definitely give it a try later in the future.
+
+
+with this, the <a id="linkbjinho" href="https://pooftie.me" target="_blank">pooftie.me</a> website now has 21 active subdomains, and many more to come !!
+can you guess what the next ones will be about, based on the floating images that say "under construction" ?
+
+
+and, the <a id="linkbjinho" href="https://aes.pooftie.me" target="_blank">aesthetic virtual journal</a> has 11 collages now, since i was inspired yesterday i made this really cute new one :</pre>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/jhqrZZN.png"/></center>
+<br><br>
+<center><sub>✂️</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/zip/internet%20baby.zip" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">internet baby .zip</font></a>　</center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really really really love this one .. <sub>💖</sub>
+there are so many cute tiny things !! please make sure to open <a id="linkbjinho" href="https://aes.pooftie.me/xi" target="_blank">the big version</a> to see all the details.
+recently i have been quite inspired for collages as i am making many new graphics for websites & games, so i have more folders here with ideas .. !
+</pre><br>
+
+
+<center><sub>💿</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">old stuffie .mp3</font></a>　
+</center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+do you remember this melody ?
+this is a really old one !! i never used it for anything, but it has been sitting on my <a id="linkbjinho" href="/portfolio" target="_blank">/portfolio</a> for years, because i do like it a lot.
+i finally am using it for something ( sort of )
+
+
+
+i have some more things i wanted show you, but i didn't prepare them in time for the august post, so .. next time it is !
+
+i hope you all have been taking good care & taking time for your personal needs. it's important to prioritize your happiness, for yourself, and for those who love you.
+
+xoxo <sub>💕</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/16.png"/></center><br>
+
+<br><br>
 <center><img src="https://middlepot.com/img/24.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
 <center>july . 31 . 2022</center>
