--- a/faq.html
+++ b/faq.html
@@ -587,7 +587,7 @@ i like to use her name and variations a lot ! small and cute.<br><br>
 <font color="#B1A69E">
 　　　　　<font color="#91816b">𝓅𝓮𝓇𝓈𝓸𝓃𝒶𝓁𝒾𝓉𝓎 𝓉𝓇𝒶𝒾𝓉𝓈</font> ..<br>
 <br>
-<sub>🎗</sub>　i'm very shy & introverted. so, because of my introversion, i don't feel bad for being shy, it's just part of me ;<br>
+<sub>🎗</sub>　i'm very shy & introverted. so, because of my introversion, i don't really feel bad for being shy, it's just part of me ;<br>
 <sub>🎗</sub>　i do my best to take care of others and myself. i want to bring comfort and safety to everyone !<br>
 <sub>🎗</sub>　i have huge difficulties in approaching and feeling comfortable with new people, sometimes even becoming close to people i know for a long time already ;<br>
 <sub>🎗</sub>　when i am comfortable with people i randomly can talk a lot, sometimes even too much <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
@@ -611,9 +611,9 @@ i like to use her name and variations a lot ! small and cute.<br><br>
 but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it :<br>
 <br>
 <sub>🖇</sub>　my height is 168cm ( 5'6 ft )<br>
-<sub>🖇</sub>　i weight 52kg ( 114 lbs )<br>
-<sub>🖇</sub>　my foot size is 23cm<br>
-<sub>🖇</sub>　as of september 2021 , my hair is hip length ( and i will keep trimming it to keep it like that )<br>
+<sub>🖇</sub>　my current weight is 51kg ( 113 lbs )<br>
+<sub>🖇</sub>　my foot size is 23cm ( 9 in )<br>
+<sub>🖇</sub>　my hair is currently hip length ( and i am keeping it )<br>
 <sub>🖇</sub>　my hair changes colors a bit according to the lighting, it becomes lighter if i go out in the sun frequently. it's light brow / dark blond, and sometimes it gets a few orangy & blond highlights, that are noticeable in the sunlight<br>
 <sub>🖇</sub>　i like to keep a "himecut" in my hair, with short side bangs. i find it cute but also a bit more mature than straight bangs !<br>
 <sub>🖇</sub>　my mom used to cut my hair, and now i cut it myself ( i'm not very good at it, but my hair is quite wavy so you can't notice small mistakes )<br>
