--- a/faq.html
+++ b/faq.html
@@ -614,7 +614,7 @@ but i decided that i'll post, since these are information that anyone who knows 
 <sub>🖇</sub>　my current weight is 51kg ( 112 lbs )<br>
 <sub>🖇</sub>　my foot size is 23cm ( 9 in )<br>
 <sub>🖇</sub>　my hair is currently hip length ( and i am keeping it )<br>
-<sub>🖇</sub>　my hair changes colors a bit according to the lighting, it becomes lighter if i go out in the sun frequently. it's light brow / dark blond, and sometimes it gets a few orangy & blond highlights, that are noticeable in the sunlight<br>
+<sub>🖇</sub>　my hair changes colors a bit according to the lighting, it becomes lighter if i go out in the sun frequently. it's light brow / dark blonde, and sometimes it gets a few orangy & blonde highlights, that are noticeable in the sunlight<br>
 <sub>🖇</sub>　i like to keep a "himecut" in my hair, with short side bangs. i find it cute but also a bit more mature than straight bangs !<br>
 <sub>🖇</sub>　my mom used to cut my hair, and now i cut it myself ( i'm not very good at it, but my hair is quite wavy so you can't notice small mistakes )<br>
 <sub>🖇</sub>　my eye color is cyan / turquoise + a little bit grayish<br>
