--- a/blog.html
+++ b/blog.html
@@ -613,7 +613,7 @@ i have seen some people using this template already, and it made me so happy .. 
 
 
 recently i also made another thing i wanted to do for a long time, but well, it's not a useful one .. but it's certainly an adorable one !!
-an web page i made is just for funsies : <a id="linkbjinho" href="https://frilly.pooftie.me" target="_blank">frilly.pooftie.me</a> <sub>🎗</sub>
+a web page i made just for funsies : <a id="linkbjinho" href="https://frilly.pooftie.me" target="_blank">frilly.pooftie.me</a> <sub>🎗</sub>
 </pre>
 <br><br>
 
