--- a/about.html
+++ b/about.html
@@ -613,7 +613,7 @@ p { margin: 0; }
 <div id="spoiler1" class="spoiler-area is-closed" style="margin-top:-16px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="350" height="auto" src="https://i.imgur.com/3v4WYXw.png"/>
+<img width="350" height="auto" src="https://i.imgur.com/7n9QNeA.jpg"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
