--- a/fashion.html
+++ b/fashion.html
@@ -656,11 +656,15 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/7.jpg"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/0008.jpg"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/008.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/08.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/8.jpg"/><br><br>
+<br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/00009.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/0009.jpg"/><br><br>
 <br>
@@ -668,7 +672,7 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/09.jpg"/><br><br>
 <br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/9.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/9.png"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/10.jpg"/><br><br>
 <br>
@@ -677,6 +681,8 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://file.pooftie.me/f/011.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/11.jpg"/><br><br>
+<br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/012.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/12.png"/><br><br>
 <br>
