--- a/index.html
+++ b/index.html
@@ -489,21 +489,21 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 10px !
 <center>
 <div style="line-height: 5px"><br></div>
 <center>
-<div id="update" style="background-image:url(https://i.imgur.com/zfmgsed.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 175px;height: 112px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 15px">
+<div id="update" style="background-image:url(https://i.imgur.com/zfmgsed.png); background-repeat:no-repeat; border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 178px;height: 112px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 15px">
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div><div id="updateitems">
+　　09.14 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> account stuff on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
 　　09.06 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> photos on: <a href="/fashion" style="text-decoration: none;"><font color="#DFB7B7">/fashion</font></a><br>
 　　08.31 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
 　　08.31 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> mini games on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
 　　08.30 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> items on: <a href="/shybunny" style="text-decoration: none;"><font color="#DFB7B7">/shybunny</font></a><br>
-　　08.30 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> collage on: <a href="/aes" style="text-decoration: none;"><font color="#DFB7B7">/aes</font></a><br>
 </div></div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . september . 06</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . september . 14</font></font></font>
 <div style="line-height: 13px"><br><br></div>
 <div style="line-height: 10px">
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
